--- a/cloud/functions/package.json
+++ b/cloud/functions/package.json
@@ -10,20 +10,21 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "8"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "jsdom": "^16.0.1",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^12.2.4",
+    "@types/puppeteer": "^2.0.0",
+    "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "typescript": "^3.2.2"
   },
-  "private": true,
-  "engines": {
-    "node": "10"
-  }
+  "private": true
 }
