--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.11.10",
     "core-js": "^3.6.4",
     "firebase": "^7.7.0",
+    "ng2-dragula": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
