--- a/app/package.json
+++ b/app/package.json
@@ -47,6 +47,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^13.5.1",
     "codelyzer": "^5.2.1",
+    "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -54,10 +55,17 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.0",
     "karma-jasmine-html-reporter": "^1.5.1",
+    "prettier": "1.19.1",
+    "pretty-quick": "^2.0.1",
     "protractor": "~5.4.2",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
     "typescript": "~3.4.3"
   },
-  "description": "A Trello look alike board for my flat hunting in Zürich."
+  "description": "A Trello look alike board for my flat hunting in Zürich.",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  }
 }
