--- a/app/package.json
+++ b/app/package.json
@@ -14,13 +14,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
+    "@angular/common": "~9.0.0-rc.11",
+    "@angular/core": "~9.0.0-rc.11",
     "@angular/fire": "^5.3.0",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/forms": "~9.0.0-rc.11",
+    "@angular/platform-browser": "~9.0.0-rc.11",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
+    "@angular/router": "~9.0.0-rc.11",
     "@deckdeckgo/lazy-img": "^1.0.0-rc.3",
     "@ionic-native/core": "^5.19.1",
     "@ionic-native/splash-screen": "^5.19.1",
@@ -35,18 +35,18 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.803.23",
-    "@angular-devkit/build-angular": "~0.803.23",
-    "@angular-devkit/core": "~8.3.23",
-    "@angular-devkit/schematics": "~8.3.23",
-    "@angular/cli": "~8.3.23",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "~0.900.0-rc.11",
+    "@angular-devkit/core": "~9.0.0-rc.11",
+    "@angular-devkit/schematics": "~9.0.0-rc.11",
+    "@angular/cli": "~9.0.0-rc.11",
+    "@angular/compiler": "~9.0.0-rc.11",
+    "@angular/compiler-cli": "~9.0.0-rc.11",
+    "@angular/language-service": "~9.0.0-rc.11",
     "@ionic/angular-toolkit": "^2.1.2",
     "@types/jasmine": "~3.5.1",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.5.1",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -60,7 +60,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.7.5"
   },
   "description": "A Trello look alike board for my flat hunting in Zürich.",
   "husky": {
