--- a/app/package.json
+++ b/app/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
     "@angular/router": "~9.0.0-rc.11",
     "@deckdeckgo/lazy-img": "^1.0.0-rc.3",
-    "@ionic-native/core": "^5.19.1",
-    "@ionic-native/splash-screen": "^5.19.1",
-    "@ionic-native/status-bar": "^5.19.1",
-    "@ionic/angular": "^4.11.10",
+    "@ionic-native/core": "^5.20.0",
+    "@ionic-native/splash-screen": "^5.20.0",
+    "@ionic-native/status-bar": "^5.20.0",
+    "@ionic/angular": "^5.0.0-rc.1",
     "core-js": "^3.6.4",
     "firebase": "^7.7.0",
     "ng2-dragula": "^2.1.1",
@@ -43,10 +43,10 @@
     "@angular/compiler-cli": "~9.0.0-rc.11",
     "@angular/language-service": "~9.0.0-rc.11",
     "@ionic/angular-toolkit": "^2.1.2",
-    "@types/jasmine": "~3.5.1",
+    "@types/jasmine": "~3.5.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^13.5.2",
+    "codelyzer": "^5.2.1",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -57,7 +57,7 @@
     "karma-jasmine-html-reporter": "^1.5.1",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
-    "protractor": "~5.4.2",
+    "protractor": "~5.4.3",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
     "typescript": "~3.7.5"
