--- a/app/package.json
+++ b/app/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "~9.0.0-rc.11",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
     "@angular/router": "~9.0.0-rc.11",
-    "@deckdeckgo/lazy-img": "^1.0.0-rc.3",
+    "@deckdeckgo/lazy-img": "^1.0.0-rc.3-1",
     "@ionic-native/core": "^5.20.0",
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
