--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.0-rc.11",
     "@angular/service-worker": "~9.0.0-rc.11",
     "@deckdeckgo/lazy-img": "^1.0.0-rc.3-1",
+    "@deckdeckgo/utils": "^1.0.0-rc.2",
     "@ionic-native/core": "^5.20.0",
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
