--- a/app/ngsw-config.json
+++ b/app/ngsw-config.json
@@ -6,7 +6,7 @@
       "name": "app",
       "installMode": "prefetch",
       "resources": {
-        "files": ["/assets/favicon/favicon.ico", "/index.html", "/*.css", "/*.js"]
+        "files": ["/assets/favicon/favicon.ico", "/index.html", "/*.css", "/*.js", "/manifest.webmanifest"]
       }
     },
     {
