--- a/app/package.json
+++ b/app/package.json
@@ -14,14 +14,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~9.0.0-rc.11",
-    "@angular/core": "~9.0.0-rc.11",
+    "@angular/common": "~10.2.5",
+    "@angular/core": "~10.2.5",
     "@angular/fire": "^5.3.0",
-    "@angular/forms": "~9.0.0-rc.11",
-    "@angular/platform-browser": "~9.0.0-rc.11",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.11",
-    "@angular/router": "~9.0.0-rc.11",
-    "@angular/service-worker": "~9.0.0-rc.11",
+    "@angular/forms": "~10.2.5",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
+    "@angular/service-worker": "~10.2.5",
     "@deckdeckgo/lazy-img": "^1.0.0-rc.3-1",
     "@deckdeckgo/utils": "^1.0.0-rc.2",
     "@ionic/angular": "^5.0.0-rc.1",
@@ -29,37 +29,37 @@
     "firebase": "^7.7.0",
     "ng2-dragula": "^2.1.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.803.23",
-    "@angular-devkit/build-angular": "~0.900.0-rc.11",
-    "@angular-devkit/core": "~9.0.0-rc.11",
-    "@angular-devkit/schematics": "~9.0.0-rc.11",
-    "@angular/cli": "~9.0.0-rc.11",
-    "@angular/compiler": "~9.0.0-rc.11",
-    "@angular/compiler-cli": "~9.0.0-rc.11",
-    "@angular/language-service": "~9.0.0-rc.11",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular-devkit/core": "~10.2.3",
+    "@angular-devkit/schematics": "~10.2.3",
+    "@angular/cli": "~10.2.3",
+    "@angular/compiler": "~10.2.5",
+    "@angular/compiler-cli": "~10.2.5",
+    "@angular/language-service": "~10.2.5",
     "@ionic/angular-toolkit": "^2.1.2",
     "@types/jasmine": "~3.5.2",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.5.2",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "1.19.1",
     "pretty-quick": "^2.0.1",
-    "protractor": "~5.4.3",
+    "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
-    "tslint": "~6.0.0",
-    "typescript": "~3.7.5"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.7"
   },
   "description": "A Trello look alike board for my flat hunting in Zürich.",
   "husky": {
