--- a/app/package.json
+++ b/app/package.json
@@ -16,20 +16,20 @@
   "dependencies": {
     "@angular/common": "~12.0.4",
     "@angular/core": "~12.0.4",
-    "@angular/fire": "^5.3.0",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.4",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "@angular/service-worker": "~12.0.4",
-    "@deckdeckgo/lazy-img": "^1.0.0-rc.3-1",
-    "@deckdeckgo/utils": "^1.0.0-rc.2",
-    "@ionic/angular": "^5.0.0-rc.1",
-    "core-js": "^3.6.4",
-    "firebase": "^7.7.0",
+    "@deckdeckgo/lazy-img": "^3.1.0",
+    "@deckdeckgo/utils": "^2.0.1",
+    "@ionic/angular": "^5.6.9",
+    "core-js": "^3.14.0",
+    "firebase": "^8.6.7",
     "ng2-dragula": "^2.1.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
+    "rxjs": "~7.1.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -41,25 +41,25 @@
     "@angular/compiler": "~12.0.4",
     "@angular/compiler-cli": "~12.0.4",
     "@angular/language-service": "~12.0.4",
-    "@ionic/angular-toolkit": "^2.1.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "husky": "^4.2.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@ionic/angular-toolkit": "^4.0.0",
+    "@types/jasmine": "~3.7.7",
+    "@types/jasminewd2": "~2.0.9",
+    "@types/node": "^15.12.2",
+    "codelyzer": "^6.0.2",
+    "husky": "^6.0.0",
+    "jasmine-core": "~3.7.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "1.19.1",
-    "pretty-quick": "^2.0.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "prettier": "2.3.1",
+    "pretty-quick": "^3.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.6.2",
+    "ts-node": "~10.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.3.2"
   },
   "description": "A Trello look alike board for my flat hunting in Zürich.",
   "husky": {
