--- a/app/package.json
+++ b/app/package.json
@@ -58,8 +58,7 @@
     "pretty-quick": "^3.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.2"
+    "tslint": "~6.1.0"
   },
   "description": "A Trello look alike board for my flat hunting in Zürich.",
   "husky": {
