--- a/app/package.json
+++ b/app/package.json
@@ -58,7 +58,8 @@
     "pretty-quick": "^3.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.0.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "^4.2.4"
   },
   "description": "A Trello look alike board for my flat hunting in Zürich.",
   "husky": {
